--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.cjs",
   "type": "module",
   "scripts": {
-    "start":"node index.cjs",
+    "start": "node index.cjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
@@ -12,26 +12,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/register": "^7.21.0",
+    "@babel/helpers": "^7.24.8",
+    "@babel/register": "^7.24.6",
+    "@babel/template": "^7.24.7",
     "@types/node": "^18.0.6",
+    "anymatch": "^3.1.3",
     "babel-cli": "^6.26.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-     "cors": "^2.8.5",
-    "firebase": "^9.22.0",
-    "firebase-admin": "^11.8.0",
+    "chokidar": "^3.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.2.0",
     "history": "^5.3.0",
+    "micromatch": "^4.0.7",
     "mongodb": "^5.5.0",
     "node-fetch": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "readdirp": "^3.6.0"
   },
   "description": "",
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.22.1",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.3",
     "babel-loader": "^9.1.2",
