adding market DATA

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "readdirp": "^3.6.0"
+    "readdirp": "^3.6.0",
+    "request": "^2.88.2"
   },
   "description": "",
   "devDependencies": {
