--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/helpers": "^7.24.8",
     "@babel/register": "^7.24.6",
     "@babel/template": "^7.24.7",
+    "@emailjs/browser": "^4.4.1",
+    "@emailjs/nodejs": "^4.0.4",
     "@types/node": "^18.0.6",
     "anymatch": "^3.1.3",
     "babel-cli": "^6.26.0",
@@ -30,6 +32,8 @@
     "micromatch": "^4.0.7",
     "mongodb": "^5.5.0",
     "node-fetch": "^3.2.6",
+    "node-mailjet": "^6.0.5",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
