--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emailjs/nodejs": "^4.0.4",
     "@types/node": "^18.0.6",
     "anymatch": "^3.1.3",
+    "axios": "^1.7.4",
     "babel-cli": "^6.26.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.20.2",
